--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ body{
   height: 100%;
   font-family: Roboto Medium, sans-serif;
 }
-header{
+.index-header{
   width: 100%;
   height: 435px;
   background: #EEE;
@@ -92,7 +92,7 @@ header{
   margin-left: 60px;
   padding-left: 26px;
   font-size: 14px;
-  background-image: url("../img/cart.png");
+    background-image: url("../img/index/cart.png");
   background-repeat: no-repeat;
 }
 .header-slider{
@@ -239,7 +239,7 @@ hr{
   float: right;
   width: 240px;
   height: 360px;
-  background-image: url(../img/since-logo.png);
+    background-image: url(../img/index/since-logo.png);
   background-repeat: no-repeat;
 }
 .aboutUs-pre-right{
@@ -255,7 +255,7 @@ hr{
 }
 .htmlAcademy{
   display: inline-block;
-  margin-left: 120px;
+  margin-left: 110px;
   margin-top: 50px;
 }
 .borodinski{
@@ -291,17 +291,17 @@ margin-top: 45px;
   	background: #FF555A;
 }
 .social-vk, .social-vk:hover{
-  background-image: url(../img/social-vk.png);
+    background-image: url(../img/index/social-vk.png);
   background-repeat: no-repeat;
   background-position: center;
 }
 .social-fb, .social-fb:hover{
-  background-image: url(../img/social-fb.png);
+    background-image: url(../img/index/social-fb.png);
   background-repeat: no-repeat;
   background-position: center;
 }
 .social-inst, .social-inst:hover{
-  background-image: url(../img/social-inst.png);
+    background-image: url(../img/index/social-inst.png);
   background-repeat: no-repeat;
   background-position: center;
   margin-right: 0px;
@@ -320,4 +320,28 @@ margin-top: 45px;
 }
 footer{
   padding-bottom: 80px;
+}
+hr{
+    opacity: 0.2;
+}
+
+
+/*CATALOG*/
+
+
+.catalog-header{
+  width: 100%;
+  background: #EEE;
+}
+.header-title{
+  width: 660px;
+  height: 160px;
+  font-size: 40px;
+  color: black;
+  margin: 0 auto;
+  padding-top: 80px;
+  text-align: center;
+}
+.filter{
+  width: 240px;
 }
